# nibble-rp2040-rs

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: dbg_msg.rs  demux_matrix.rs  encoder.rs  layout.rs  main.rs  rust.raw  types.rs
