[package]
name = "nibble2040"
version = "0.1.0"
authors = ["Andrew Christiansen <andrewtaylorchristiansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyberon = { git = "https://github.com/TeXitoi/keyberon" }
usb-device = "0.2.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "0.6.0-rc.4"
embedded-hal = { version = "0.2.5", features=["unproven"] }
embedded-time = "0.12.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal.git", features=["rt"]}
#rp2040-hal = { version = "0.3", features=["rt"]}
rp2040-boot2 = { version = "0.2", optional = true }
smart-leds = "0.3"
smart-leds-trait = "0.2"
ws2812-spi = "0.4.0"
#ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs", rev = "4f0d81e594ea9934f9c4c38ed9824ad0cce4ebb5" }
ws2812-pio = { path = "../ws2812-pio-rs" }
#ws2812-pio = "0.1.0"


[features]
default = ["boot2"]
boot2 = ["rp2040-boot2"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
