[package]
name = "nibble2040"
version = "0.1.0"
authors = ["Andrew Christiansen <andrewtaylorchristiansen@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyberon = { git = "https://github.com/TeXitoi/keyberon" }
usb-device = "0.2.0"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.0.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
embedded-time = "0.12.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp2040-hal = { version = "0.5", features=["rt"]}
rp2040-boot2 = { version = "0.2", optional = true }
smart-leds = "0.3"
smart-leds-trait = "0.2"
ws2812-pio = "0.3"
ssd1306 = "0.7.0"
embedded-graphics = "0.7.1"
display-interface-i2c = "0.4.0"


[features]
default = ["boot2"]
boot2 = ["rp2040-boot2"]
kb2040 = []
rp2040-pro-micro = []
bit-c-pro = []

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
